# heaveneye-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: build-desktop.yml
docs/: packet-agent-prd-tech-plan.md  product-introduction.md  user-manual.md
electron/: main.cjs  preload.cjs
electron/ipc/: register-ipc.cjs
electron/services/: capture-store.cjs  certificate-service.cjs  config.cjs  proxy-service.cjs  qwen-client.cjs  sanitizer.cjs
scripts/: dev.cjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  certs.rs  main.rs  models.rs  proxy.rs  replay.rs  system_proxy.rs
src/components/: inspector-preview.tsx  structured-agent-answer.tsx
src/lib/: desktop.ts  inspector.ts  request-export.ts  session-export.ts  sse.ts  ui-errors.ts
tests/: desktop-bridge.test.ts  inspector-utils.test.ts  proxy-body-preview.test.ts  proxy-hosts.test.ts  request-export.test.ts  sanitizer.test.ts  sse.test.ts  structured-agent-answer.test.tsx  ui-error-utils.test.ts
