[package]
name = "heaveneye-agent"
version = "0.1.0"
description = "AI-assisted HTTP/HTTPS capture and debugging workbench for developers and QA teams."
authors = ["qixi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
bytes = "1.10.1"
dotenvy = "0.15.7"
flate2 = "1.1.4"
h2 = "0.4.12"
http = "1.3.1"
open = "5.3.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rcgen = { version = "0.14.8", features = ["x509-parser"] }
rustls = "0.23.34"
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.1", features = [] }
tokio = { version = "1.48.0", features = ["rt", "io-util"] }
url = "2.5.7"
webpki-roots = "0.26.11"

[patch.crates-io]
cookie = { path = "../vendor/cookie" }
tauri = { path = "../vendor/tauri" }
tauri-utils = { path = "../vendor/tauri-utils" }
